--- a/templates/index.html
+++ b/templates/index.html
@@ -94,7 +94,7 @@
             {% if user.is_authenticated %}
                 <li class="list-inline-item mx-3"><a href="{% url 'memorials:account_profile' %}">My Account</a></li>
             {% else %}
-                <li class="list-inline-item mx-3"><a href="{% url 'account_login' %}">Sign Up/Login</a></li>
+                <li class="list-inline-item mx-3"><a href="{% url 'account_signup' %}">Sign Up/Login</a></li>
             {% endif %}
         </ul>
         
@@ -154,7 +154,7 @@
                     </li>
                 {% else %}
                     <li class="mobile-menu-item">
-                        <a href="{% url 'account_login' %}" class="mobile-menu-link">
+                        <a href="{% url 'account_signup' %}" class="mobile-menu-link">
                             <span class="mobile-menu-text">Sign Up / Login</span>
                             <span class="mobile-menu-subtext">Access your account</span>
                         </a>
