--- a/templates/memorials/memorial_detail.html
+++ b/templates/memorials/memorial_detail.html
@@ -189,7 +189,7 @@
       </button>
       {% else %}
       <a href="{% url 'account_login' %}?next={{ request.path }}" class="btn btn-outline-primary">
-        <i class="fas fa-sign-in-alt me-2"></i>Login to Leave a Tribute
+        <i class="fas fa-sign-in-alt me-2" style="color: #d96e2b;"></i>Login to Leave a Tribute
       </a>
       {% endif %}
     </div>
@@ -341,7 +341,7 @@
     <div class="modal-content">
       <div class="modal-header border-0 pb-0">
         <h5 class="modal-title" id="tributeFormModalLabel">
-          <i class="fas fa-heart me-2 text-primary"></i>Leave a Tribute
+          <i class="fas fa-heart me-2 text-primary" style="color: #d96e2b;"></i>Leave a Tribute
         </h5>
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
@@ -380,7 +380,7 @@
     <div class="modal-content">
       <div class="modal-header border-0 pb-0">
         <h5 class="modal-title" id="editTributeModalLabel">
-          <i class="fas fa-edit me-2 text-primary"></i>Edit Tribute
+          <i class="fas fa-edit me-2 text-primary" style="color: #d96e2b;"></i>Edit Tribute
         </h5>
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
@@ -712,7 +712,7 @@
     <div class="modal-content">
       <div class="modal-header border-0 pb-0">
         <h5 class="modal-title" id="storyFormModalLabel">
-          <i class="fas fa-book-open me-2 text-primary"></i>Share a Story
+          <i class="fas fa-book-open me-2" style="color: #d96e2b;"></i></i>Share a Story
         </h5>
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
@@ -756,7 +756,7 @@
     <div class="modal-content">
       <div class="modal-header border-0 pb-0">
         <h5 class="modal-title" id="editStoryModalLabel">
-          <i class="fas fa-edit me-2 text-primary"></i>Edit Story
+          <i class="fas fa-book-open me-2" style="color: #d96e2b;"></i></i>Edit Story
         </h5>
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
